
o String.normalize_space

  New and efficient C implementation; sanitises whitespace, even in wide
  strings.

o String.trim_all_whites

  Extended to the entire range of Unicode white spaces.

o Protocols.HTTP

  Allow directly specifying the body of a POST request (needed for the Google
  Apps API).

o Tools.PV and pike -x pv now works with GTK2 as well as GTK.


Deprecations
------------

o The libpq based old Postgres driver is now deprecated.  The new pgsql
  driver is faster, better tested, more stable, maintained, has more
  features, does not depend on external libraries and is less filling.


Bug fixes
---------

o Support undocumented OS behaviour on out-of-band data returning
  EOPNOTSUPP and ECONNRESET when a stream is half closed.
  The undocumented behaviour is found on (at least) 2.6.x Linux
  and FreeBSD 7.x and 8.x.

o Use nanosleep() when available instead of poll or select hacks for
  the Pike-level sleep() function.

o Fixed dangling cache reference in prepared statements when using CREATE
  statements via Sql.pgsql.

o Fixed broken (autore)connect logic in Sql.pgsql.

o Improved widestring support for Parser.Tabular.

o Fixed segfault in combine_path_nt on windows when the first char
  of an appended path is wide.

o Fixed fatal error in the constant expression evaluator of the
  compiler for certain code.

o Fixed a problem in "pike -x module" that prevented auto tools from
  running in the correct directory.

o Fixed memory leak on out of memory in Mysql.fetch_json_result().

o Fixed locking problem in Mysql.

o Fixed NULL-deref for compilation errors in range expressions.

o Fixes a segfault occuring if exit() is used from a thread when
  cleanup-on-exit is compiled in.

o Fixed so than an existing content-type is not overriden in
  async_do_method_url.

o Fixed issue where GTK objects weren't destroyed properly.
  http://pike.ida.liu.se/docs/tutorial/hello/window.xml now
  works again.
